force-app/main/default/objects/User/fields/LPCR_BypassTrigger__c.field-meta.xml
<CustomField>
    <fullName>LPCR_BypassTrigger__c</fullName>
    <label>LPCR_BypassTrigger</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SM001_TestIfByPassed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>