force-app/main/default/objects/User/fields/LPCR_BypassValidationRules__c.field-meta.xml
<CustomField>
    <fullName>LPCR_BypassValidationRules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LPCR_BypassValidationRules</label>
    <type>Checkbox</type>
</CustomField>