force-app/main/default/objects/User/fields/LPCR_IdEmploye__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IdEmploye__c</fullName>
    <label>ID employé</label>
    <length>50</length>
    <type>Text</type>
</CustomField>