force-app/main/default/objects/User/fields/LPCR_IdExterne__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IdExterne__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>ID externe</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>