force-app/main/default/objects/User/fields/LPCR_IdExterne_Owner__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IdExterne_Owner__c</fullName>
    <label>Id Externe Owner</label>
    <length>50</length>
    <type>Text</type>
</CustomField>