force-app/main/default/objects/User/fields/LPCR_ObjectifCommercial__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ObjectifCommercial__c</fullName>
    <description>Objectif annuel de CA de chaque commercial</description>
    <label>Objectif Commercial</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>