force-app/main/default/objects/User/fields/LPCR_RegionCommerciale__c.field-meta.xml
<CustomField>
    <fullName>LPCR_RegionCommerciale__c</fullName>
    <label>Region Commerciale</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Nord-Est</fullName>
            </value>
            <value>
                <fullName>Rhône-Alpes</fullName>
            </value>
            <value>
                <fullName>PACA-LR</fullName>
            </value>
            <value>
                <fullName>Grand-Ouest</fullName>
            </value>
            <value>
                <fullName>IDF-Sud</fullName>
            </value>
            <value>
                <fullName>IDF-Nord</fullName>
            </value>
            <value>
                <fullName>IDF-Sédentaires</fullName>
            </value>
            <value>
                <fullName>Grands-Comptes</fullName>
            </value>
            <value>
                <fullName>Marchés Publics</fullName>
            </value>
            <value>
                <fullName>Réseau Grandir</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>